--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <h1>AWS static site in S3 bucket.</h1> 
-        <h2>v 2.1</h2>
+        <h1>AWS test site for codedeploy-demo.</h1> 
+        <h2>v 2.2</h2>
     </body>
 </html>
