--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <body>
         <h1>AWS test site for codedeploy-demo.</h1> 
-        <h2>v 2.2</h2>
+        <h2>v 2.2: deployed to separate EC2 instances</h2>        
+        <h2>v 2.3: deployed to separate EC2 instances and autoscaling group via the same tag codedeploy-demo-web = stage</h2>
     </body>
 </html>
