--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
         <h1>AWS test site for codedeploy-demo.</h1> 
         <h2>v 2.2: deployed to separate EC2 instances</h2>        
         <h2>v 2.3: deployed to separate EC2 instances and autoscaling group via the same tag codedeploy-demo-web = stage</h2>
+        <h3>v 2.3.1: tried to tune deploy for ASG with ECS, but not finished</h3>        
+        <h2>v 2.4: deployed to ASG via CodePipeline</h2>                
     </body>
 </html>
