--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <h2>v 2.4: deployed to ASG via CodePipeline</h2>
         <h2>v 2.5: deployment separated to dev and stage:</h2>
         <h3>git branch dev, pipeline looking for it, ec2 tag = "dev", deployment group looking for tag "dev", and app2 - probably separate app not needed</h3>
-        <h4>successfully deployed to EC2 = "dev" via pileline, then merged dev to main and EC2="stage" were succesfully updated</h4>
+        <h4>v 2.5.1: Report: successfully deployed to EC2 = "dev" via pileline, then merged dev to main and EC2="stage" were succesfully updated</h4>
     </body>
 </html>
