--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
     <body>
         <h1>AWS test site for codedeploy-demo.</h1> 
-        <h2>v 2.2: deployed to separate EC2 instances</h2>        
-        <h2>v 2.3: deployed to separate EC2 instances and autoscaling group via the same tag codedeploy-demo-web = stage</h2>
-        <h3>v 2.3.1: tried to tune deploy for ASG with ECS, but not finished</h3>        
-        <h2>v 2.4: deployed to ASG via CodePipeline</h2>
-        <h2>v 2.5: deployment separated to dev and stage:</h2>
+        <h2>v.2.2: deployed to separate EC2 instances</h2>        
+        <h2>v.2.3: deployed to separate EC2 instances and autoscaling group via the same tag codedeploy-demo-web = stage</h2>
+        <h3>v.2.3.1: tried to tune deploy for ASG with ECS, but not finished</h3>        
+        <h2>v.2.4: deployed to ASG via CodePipeline</h2>
+        <h2>v.2.5: deployment separated to dev and stage:</h2>
         <h3>git branch dev, pipeline looking for it, ec2 tag = "dev", deployment group looking for tag "dev", and app2 - probably separate app not needed</h3>
-        <h4>v 2.5.1: Report: successfully deployed to EC2 = "dev" via pileline, then merged dev to main and EC2="stage" were succesfully updated</h4>
+        <h4>v.2.5.1: Report: successfully deployed to EC2 = "dev" via pileline, then merged dev to main and EC2="stage" were succesfully updated</h4>
+        <h2>v.2.6: test app demo-web-2 was deleted, for demo-web was tuned second pipeline for branch "dev"</h2>
     </body>
 </html>
