--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <h3>git branch dev, pipeline looking for it, ec2 tag = "dev", deployment group looking for tag "dev", and app2 - probably separate app not needed</h3>
         <h4>v.2.5.1: Report: successfully deployed to EC2 = "dev" via pileline, then merged dev to main and EC2="stage" were succesfully updated</h4>
         <h2>v.2.6: test app demo-web-2 was deleted, for demo-web was tuned second pipeline for branch "dev"</h2>
+        <h3>v.2.6.1: files for build moved to separate project codebuild-demo"</h3>        
     </body>
 </html>
